src/__tests__/fixtures/error/doNotExist/input.js
const { helper } = require('../..');

const helpers = Object.create(null);
module.exports = helpers;
